# vision-core

./: .gitignore  CMakeLists.txt  Stereo.cpp  Stereo.h
include/helpers/: cv_mat.h  yaml.h
include/settings/: settings.h
include/vision/capture/: stereo_capture.h
include/vision/disparity/: sgbm.h
include/vision/exceptions/: exceptions.h
include/vision/helpers/: array_mat.h  cv_mat.h  yaml.h
include/vision/pipeline/: pipeline.h
include/vision/sensors/camera/: camera.h  stereo_camera.h
resources/: settings.yaml
src/helpers/: cv_mat.cpp  yaml.cc
src/settings/: settings.cpp
src/vision/capture/: stereo_capture.cpp
src/vision/disparity/: sgbm.cpp
src/vision/helpers/: array_mat.cpp  yaml.cc
src/vision/pipeline/: pipeline.cpp
src/vision/sensors/camera/: camera.cpp  stereo_camera.cpp
test/: test_settings.cpp
test/capture/: test_capture.cpp
test/helper/: yaml.cpp
test/sensors/: test_sensors_camera.cpp
